# cs-games

./: README.md
2022/Pong/: main.py
2022/SpaceInvaders/: main.py
2022/SpaceInvaders/Scenes/: Gameplay.py  Observer.py
2025/Invaders/src/: main.py
2025/Invaders/src/components/: button.py
2025/Invaders/src/config/: config.py
2025/Invaders/src/core/: game.py  observer.py  scene_factory.py  scenes_enum.py
2025/Invaders/src/helpers/: path_helper.py
2025/Invaders/src/scenes/: abstract_menu.py  difficulty_menu.py  endless_level.py  main_menu.py  menu_enum.py  ranking_menu.py
2025/Pong/: main.py
2025/shared/: custom_sprite.py  main.py
POC/pygames/: pyproject.toml
POC/pygames/src/: __init__.py  main.py
POC/pygames/src/core/: game.py  ia_controller.py  physics.py  player_controller.py
POC/pygames/src/entities/: ball.py  pad.py
POC/pygames/src/helper/: paths.py  positions.py
POC/pygames/src/scenes/: phase1.py
Pong/: main (2).py
SpaceInvaders/: Game.py
SpaceInvaders/Scenes/: Menu.py  Subject.py
