[project]
name = "pong"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]

packages = [
  { include = "core", from = "src" },
  { include = "scenes", from = "src" },
  { include = "entities", from = "src" },
  { include = "helper", from = "src" },
  { include = "pplay", from = "src" }
]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
